@@ -135,6 +135,7 @@ typedef struct
 #define HULL_HYDRA	5	// '-28 -28 -24', '28 28 24'
 #define HULL_GOLEM	6	// ???,???
 
+
 //===================================================================
 
 //
